style scrollbar correctly

--- a/src/index.css
+++ b/src/index.css
@@ -48,4 +48,18 @@
     color:white;
     overflow:hidden;
   }
+  
+  .scrollbar-custom {}
+  
+  .scrollbar-custom::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  .scrollbar-custom::-webkit-scrollbar-track {
+    background-color: var(--primary);
+  }
+  .scrollbar-custom::-webkit-scrollbar-thumb {
+    background-color: var(--accent);
+    border-radius: 8px;
+  }
 }
